version = "0.1.0"

[package]
name = "bear2reflect"
version = "0.0.0"
edition = "2021"

[dependencies]
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
futures = "0.3.30"
Inflector = "0.11.4"
log = "0.4"
r2d2 = "0.8.10"
regex = "1.10.4"
serde_json = "1.0"
anyhow = "1.0.86"
shellexpand = "3.1.0"
r3bl_tuify = "0.1.26"
r3bl_rs_utils_core = "0.9.13"

  [dependencies.chrono]
  version = "0.4.38"
  features = [ "serde" ]

  [dependencies.clap]
  version = "4.5.4"
  features = [ "derive" ]

  [dependencies.diesel]
  version = "2.0.0"
  features = [ "sqlite", "64-column-tables", "chrono", "r2d2" ]

  [dependencies.reqwest]
  version = "0.12.4"
  features = [ "json" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tokio]
  version = "1"
  features = [ "full" ]
